added hearder, main, footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 
   <div class="container-fluid">
 
-    
+    <header>
+
+
+
+    </header>
+
+    <main>
+
+
+
+    </main>
+
+    <footer>
+
+      
+
+    </footer>
 
   </div>
 
