--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
 
     <header>
 
+      <img src="img/logo.png" alt="">
 
+      <nav>
+
+        <ul>
+
+          <li>Home</li>
+          <li>Menu</li>
+          <li>Adres</li>
+          <li>Foto's</li>
+          <li>Contact</li>
+
+        </ul>
+
+      </nav>
 
     </header>
 
@@ -26,7 +40,7 @@
 
     <footer>
 
-      
+
 
     </footer>
 
