logo height + links added

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <header>
 
-      <img src="img/logo.png" alt="">
+      <img src="img/logo.png" height="70px" alt="">
 
       <nav>
 
         <ul>
 
-          <li>Home</li>
-          <li>Menu</li>
-          <li>Adres</li>
-          <li>Foto's</li>
-          <li>Contact</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="card.html">Menu</a></li>
+          <li><a href="adres.html">Adres</a></li>
+          <li><a href="foto's.html">Foto's</a></li>
+          <li><a href=".contact.html">Contact</a></li>
 
         </ul>
 
