working nav created

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>restorant alle me</title>
 </head>
@@ -14,21 +17,38 @@
 
     <header>
 
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
       <img src="img/logo.png" height="70px" alt="">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
 
-        <ul>
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
 
-          <li><a href="index.html">Home</a></li>
-          <li><a href="card.html">Menu</a></li>
-          <li><a href="adres.html">Adres</a></li>
-          <li><a href="foto's.html">Foto's</a></li>
-          <li><a href=".contact.html">Contact</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="card.html">Menu</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="adres.html">Adres</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="foto's.html">Foto's</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
 
         </ul>
-
-      </nav>
+      </div>
+    </nav>
 
     </header>
 
