--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 
     <main>
 
-
+      <div class="jumbotron">
+        <h1 class="display-4">Website Of Restorant</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, recusandae!</p>
+      </div>
 
     </main>
 
