--- a/card.html
+++ b/card.html
@@ -14,7 +14,38 @@
 
     <header>
 
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <img src="img/logo.png" height="70px" alt="">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="card.html">Menu</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="adres.html">Adres</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="foto's.html">Foto's</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+          </li>
+
+        </ul>
+      </div>
+    </nav>
 
     </header>
 
