--- a/index.html
+++ b/index.html
@@ -59,6 +59,37 @@
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, recusandae!</p>
       </div>
 
+      <div class="row cards">
+
+        <div class="card col-md-3 col-sm-10 mb-4" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h3 class="card-title">New menu item</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
+            <a href="card.html" class="btn btn-primary">menu</a>
+          </div>
+        </div>
+
+        <div class="card col-md-3 mb-4" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h3 class="card-title">New menu item</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
+            <a href="card.html" class="btn btn-primary">menu</a>
+          </div>
+        </div>
+
+        <div class="card col-md-3" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h3 class="card-title">New menu item</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
+            <a href="card.html" class="btn btn-primary">menu</a>
+          </div>
+        </div>
+
+      </div>
+
     </main>
 
     <footer>
