--- a/card.html
+++ b/card.html
@@ -51,7 +51,16 @@
 
     <main>
 
+      <div class="menu">
 
+        <div class="card col-md-3" style="width: 18rem;">
+          <div class="card-body">
+            <h3 class="card-title">MENU</h3>
+
+          </div>
+        </div>
+
+      </div>
 
     </main>
 
