--- a/card.html
+++ b/card.html
@@ -57,6 +57,14 @@
           <div class="card-body">
             <h3 class="card-title">MENU</h3>
 
+            <div class="card">
+
+              <h4>Drinks</h4>
+
+              
+
+            </div>
+
           </div>
         </div>
 
