details in menu

--- a/card.html
+++ b/card.html
@@ -53,15 +53,37 @@
 
       <div class="menu">
 
-        <div class="card col-md-3" style="width: 18rem;">
+        <div class="card col-md-10" style="width: 18rem;">
           <div class="card-body">
             <h3 class="card-title">MENU</h3>
 
-            <div class="card">
+            <div class="row">
 
-              <h4>Drinks</h4>
+              <div class="menuL col-md-6">
 
-              
+                <div class="card">
+
+                  <h4>Drinks</h4>
+
+                  <hr>
+
+                </div>
+
+              </div>
+
+
+
+              <div class="menuR col-md-6">
+
+                <div class="card">
+
+                  <h4>FOOOD</h4>
+
+                  <hr>
+
+                </div>
+
+              </div>
 
             </div>
 
