--- a/card.html
+++ b/card.html
@@ -63,7 +63,7 @@
 
                 <div class="card">
 
-                  <h4>Drinks</h4>
+                  <h4 class="pt-4">Drinks</h4>
 
                   <hr>
 
@@ -114,9 +114,15 @@
 
                 </div>
 
-                <div class="card">
 
-                  <h4>Deserts</h4>
+
+
+
+                <!-- BOTTOM OF LEFT SIDE -->
+
+                <div class="card mt-3">
+
+                  <h4 class="pt-4">Deserts</h4>
 
                   <hr>
 
@@ -171,11 +177,29 @@
 
 
 
+
+
+
+
+
+
+
+              <!-- RIGHT SIDE -->
+
               <div class="menuR col-md-6">
 
                 <div class="card">
 
-                  <h4>FOOOD</h4>
+                  <h4 class="pt-4">FOOOD</h4>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span>9.99</span>
+
+                  </div>
 
                   <hr>
 
