euro simbool toegevoecht

--- a/card.html
+++ b/card.html
@@ -70,7 +70,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -79,7 +79,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -88,7 +88,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -97,7 +97,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -106,7 +106,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -129,7 +129,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -138,7 +138,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -147,7 +147,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -156,7 +156,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -165,7 +165,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -197,7 +197,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -206,7 +206,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -215,7 +215,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -224,7 +224,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -233,7 +233,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -242,7 +242,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -251,7 +251,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -260,7 +260,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -269,7 +269,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -278,7 +278,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -287,7 +287,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
@@ -296,7 +296,7 @@
                   <div class="option">
 
                     <b>BUY THIS</b>
-                    <span>9.99</span>
+                    <span>€9.99</span>
 
                   </div>
 
