menu class name changed + adress added

--- a/card.html
+++ b/card.html
@@ -51,7 +51,7 @@
 
     <main>
 
-      <div class="menu">
+      <div class="center-card">
 
         <div class="card col-md-10" style="width: 18rem;">
           <div class="card-body">
