--- a/adres.html
+++ b/adres.html
@@ -51,7 +51,29 @@
 
     <main>
 
+      <div class="center-card">
 
+        <div class="card col-md-6">
+
+          <h3>Visit us</h3>
+
+          <p>
+            fantasiestraat 94
+          </p>
+
+          <p>
+            Antwerpen
+          </p>
+
+          <p>
+            0486 8062 98
+          </p>
+
+        </div>
+
+      </div>
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.9925043924873!2d4.399542851175771!3d51.21921373945419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6f71f23b76d%3A0x2832dd226011d257!2sAntwerpen+Groenplaats!5e0!3m2!1snl!2sbe!4v1545989024294" width="100%" class="mt-5" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     </main>
 
