--- a/adres.html
+++ b/adres.html
@@ -55,7 +55,9 @@
 
         <div class="card col-md-6">
 
-          <h3>Visit us</h3>
+          <h3 class="pt-4">Visit us</h3>
+
+          <hr>
 
           <p>
             fantasiestraat 94
