--- a/adres.html
+++ b/adres.html
@@ -55,21 +55,39 @@
 
         <div class="card col-md-6">
 
-          <h3 class="pt-4">Visit us</h3>
+          <h3 class="pt-4">openings uren</h3>
 
           <hr>
 
-          <p>
-            fantasiestraat 94
-          </p>
+          <b>
+            ma-vr
+          </b>
 
-          <p>
-            Antwerpen
-          </p>
+          <span>
+            12:00 - 22:00
+          </span>
 
-          <p>
-            0486 8062 98
-          </p>
+          <hr>
+
+          <b>
+            za
+          </b>
+
+          <span>
+            12:00 - 20:00
+          </span>
+
+          <hr>
+
+          <b>
+            zo
+          </b>
+
+          <span>
+            gesloten
+          </span>
+
+          <hr>
 
         </div>
 
