opeings uren get spacing-between

--- a/adres.html
+++ b/adres.html
@@ -59,33 +59,45 @@
 
           <hr>
 
-          <b>
-            ma-vr
-          </b>
+          <div class="option">
 
-          <span>
-            12:00 - 22:00
-          </span>
+            <b>
+              ma-vr
+            </b>
 
-          <hr>
+            <span>
+              12:00 - 22:00
+            </span>
 
-          <b>
-            za
-          </b>
-
-          <span>
-            12:00 - 20:00
-          </span>
+          </div>
 
           <hr>
 
-          <b>
-            zo
-          </b>
+          <div class="option">
 
-          <span>
-            gesloten
-          </span>
+            <b>
+              za
+            </b>
+
+            <span>
+              12:00 - 20:00
+            </span>
+
+            </div>
+
+          <hr>
+
+          <div class="option">
+
+            <b>
+              zo
+            </b>
+
+            <span>
+              gesloten
+            </span>
+
+          </div>
 
           <hr>
 
