--- a/foto's.html
+++ b/foto's.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>restorant alle me</title>
 </head>
+
 <body>
 
   <div class="container-fluid">
@@ -17,43 +19,55 @@
     <header>
 
       <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <img src="img/logo.png" height="70px" alt="">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <img src="img/logo.png" height="70px" alt="">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
 
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="card.html">Menu</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="card.html">Menu</a>
+            </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="adres.html">Adres</a>
-          </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="adres.html">Adres</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="foto's.html">Foto's</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="foto's.html">Foto's</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact us</a>
+            </li>
 
-        </ul>
-      </div>
-    </nav>
+          </ul>
+        </div>
+      </nav>
 
     </header>
 
     <main>
 
 
+
+
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination d-flex justify-content-center">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
 
     </main>
 
@@ -66,4 +80,5 @@
   </div>
 
 </body>
+
 </html>
