--- a/foto's.html
+++ b/foto's.html
@@ -56,15 +56,55 @@
     <main>
 
 
+      <div class="row">
 
+        <div class="col-lg-4 col-md-12 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-1.jpg" alt="video" data-toggle="modal" data-target="#modal1">
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-2.jpg" alt="video" data-toggle="modal" data-target="#modal6">
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-3.jpg" alt="video" data-toggle="modal" data-target="#modal4">
+
+        </div>
+
+      </div>
+      
+      <div class="row">
+
+        <div class="col-lg-4 col-md-12 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-4.jpg" alt="video" data-toggle="modal" data-target="#modal2">
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-5.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+
+          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-6.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+
+        </div>
+
+      </div>
 
 
       <nav aria-label="Page navigation example">
         <ul class="pagination d-flex justify-content-center">
           <li class="page-item"><a class="page-link" href="#">Previous</a></li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
           <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
       </nav>
