--- a/foto's.html
+++ b/foto's.html
@@ -58,43 +58,75 @@
 
       <div class="row">
 
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-1.jpg" alt="video" data-toggle="modal" data-target="#modal1">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-2.jpg" alt="video" data-toggle="modal" data-target="#modal6">
+          <img class="img-fluid" src="img/food1.jpg" alt="video" data-toggle="modal" data-target="#modal1">
 
         </div>
 
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-3.jpg" alt="video" data-toggle="modal" data-target="#modal4">
+          <img class="img-fluid" src="img/food2.jpg" alt="video" data-toggle="modal" data-target="#modal6">
+
+        </div>
+
+        <div class="col-md-4 mb-4">
+
+          <img class="img-fluid" src="img/food3.jpg" alt="video" data-toggle="modal" data-target="#modal4">
 
         </div>
 
       </div>
-      
+
       <div class="row">
 
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-4.jpg" alt="video" data-toggle="modal" data-target="#modal2">
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-5.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+          <img class="img-fluid" src="img/food4.jpg" alt="video" data-toggle="modal" data-target="#modal2">
 
         </div>
 
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="https://mdbootstrap.com/img/screens/yt/screen-video-6.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+          <img class="img-fluid" src="img/food5.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+
+        </div>
+
+        <div class="col-md-4 mb-4">
+
+          <img class="img-fluid" src="img/food6.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4 mb-4">
+
+          <img class="img-fluid" src="img/food10.jpeg" alt="video" data-toggle="modal" data-target="#modal2">
+
+        </div>
+
+        <div class="col-md-4 mb-4">
+
+          <img class="img-fluid" src="img/food8.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+
+        </div>
+
+        <div class="col-md-4 mb-4">
+
+          <img class="img-fluid" src="img/food9.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-12 mb-4">
+
+          <img class="img-fluid" src="img/intirior.jpg" alt="video" data-toggle="modal" data-target="#modal3">
 
         </div>
 
@@ -105,6 +137,8 @@
         <ul class="pagination d-flex justify-content-center">
           <li class="page-item"><a class="page-link" href="#">Previous</a></li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
           <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
       </nav>
