index img's added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row cards">
 
         <div class="card col-md-3 col-sm-10 mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="https://www.bbcgoodfood.com/sites/default/files/recipe-collections/collection-image/2013/05/huevos-rancheros.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/food10.jpeg" alt="Card image cap">
           <div class="card-body">
             <h3 class="card-title">New menu item</h3>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="card col-md-3 mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2017/11/mexican-penne.jpg?itok=Me76nQgF" alt="Card image cap">
+          <img class="card-img-top" src="img/food2.jpg" alt="Card image cap">
           <div class="card-body">
             <h3 class="card-title">New menu item</h3>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
@@ -79,8 +79,8 @@
           </div>
         </div>
 
-        <div class="card col-md-3" style="width: 18rem;">
-          <img class="card-img-top" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--851472_11.jpg?itok=qdbTo5di" alt="Card image cap">
+        <div class="card col-md-3 mb-4" style="width: 18rem;">
+          <img class="card-img-top" src="img/food5.jpg" alt="Card image cap">
           <div class="card-body">
             <h3 class="card-title">New menu item</h3>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
