restorant theme change

--- a/card.html
+++ b/card.html
@@ -54,66 +54,129 @@
 
     <main>
 
-      <div class="center-card">
+      <div class="blug-BG">
 
-        <div class="card col-md-10" style="width: 18rem;">
-          <div class="card-body">
-            <h3 class="card-title">MENU</h3>
+        <div class="center-card">
 
-            <div class="row">
+          <div class="card col-md-10" style="width: 18rem;">
+            <div class="card-body">
+              <h3 class="card-title">MENU</h3>
 
-              <div class="menuL col-md-6">
+              <div class="row">
 
-                <div class="card">
+                <div class="menuL col-md-6">
 
-                  <h4 class="pt-4">Drinks</h4>
+                  <div class="card">
 
-                  <hr>
+                    <h4 class="pt-4">Drinks</h4>
 
-                  <div class="option">
+                    <hr>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
 
                   </div>
 
-                  <hr>
 
-                  <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+
+
+                  <!-- BOTTOM OF LEFT SIDE -->
+
+                  <div class="card mt-3">
+
+                    <h4 class="pt-4">Deserts</h4>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
 
                   </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
 
                 </div>
 
@@ -121,197 +184,138 @@
 
 
 
-                <!-- BOTTOM OF LEFT SIDE -->
-
-                <div class="card mt-3">
-
-                  <h4 class="pt-4">Deserts</h4>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                </div>
-
-              </div>
 
 
 
 
 
+                <!-- RIGHT SIDE -->
 
+                <div class="menuR col-md-6">
 
+                  <div class="card">
 
+                    <h4 class="pt-4">FOOOD</h4>
 
+                    <hr>
 
-              <!-- RIGHT SIDE -->
+                    <div class="option">
 
-              <div class="menuR col-md-6">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                <div class="card">
+                    </div>
 
-                  <h4 class="pt-4">FOOOD</h4>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
 
-                  </div>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
 
-                  </div>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
 
-                  </div>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
 
-                  </div>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
 
-                  </div>
+                    <hr>
 
-                  <hr>
+                    <div class="option">
 
-                  <div class="option">
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="option">
+
+                      <b>BUY THIS</b>
+                      <span class="badge">€9.99</span>
+
+                    </div>
+
+                    <hr>
 
                   </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="option">
-
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
-
-                  </div>
-
-                  <hr>
 
                 </div>
 
               </div>
 
             </div>
-
           </div>
+
         </div>
 
       </div>
