--- a/foto's.html
+++ b/foto's.html
@@ -105,19 +105,19 @@
 
         <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="img/food10.jpeg" alt="video" data-toggle="modal" data-target="#modal2">
+          <img class="img-fluid" src="img/food8.jpeg" alt="video" data-toggle="modal" data-target="#modal2">
 
         </div>
 
         <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="img/food8.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+          <img class="img-fluid" src="img/drink.jpg" alt="video" data-toggle="modal" data-target="#modal5">
 
         </div>
 
         <div class="col-md-4 mb-4">
 
-          <img class="img-fluid" src="img/food9.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+          <img class="img-fluid" src="img/food7.jpg" alt="video" data-toggle="modal" data-target="#modal3">
 
         </div>
 
